--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 build/
 *.iml
 .DS_Store*
-
+src/main/resources/libs/*
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
