--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     }
     //providedCompile "javax.servlet:javax.servlet-api:3.1.0"
     compile "javax.servlet:javax.servlet-api:3.1.0"
+    compile "commons-io:commons-io:2.6"
 
     compile  'org.opensaml:opensaml-core:3.4.5'
     compile  'org.opensaml:opensaml-saml-api:3.4.5'
