--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ jar {
                     !org.bouncycastle.*,!com.google.common.*
                 ''',
                 'Include-Resource': '''
+                        lib/commons-io-2.6.jar;lib:=true,
                         lib/commons-codec-1.10.jar;lib:=true,
                         lib/joda-time-2.9.jar;lib:=true,
                         lib/commons-lang-2.4.jar;lib:=true,
