--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 sourceCompatibility = '1.8'
-version = '5.3.3'
+version = '5.3.6'
 
 repositories {
     maven { url "http://repo.dotcms.com/artifactory/libs-release" }
@@ -81,14 +81,17 @@ jar {
                     !org.bouncycastle.*,!com.google.common.*
                 ''',
                 'Include-Resource': '''
-                        lib/commons-io-2.6.jar;lib:=true,
-                        lib/commons-codec-1.10.jar;lib:=true,
-                        lib/joda-time-2.9.jar;lib:=true,
-                        lib/commons-lang-2.4.jar;lib:=true,
-                        lib/cryptacular-1.1.1.jar;lib:=true,
                         lib/guava-20.0.jar;lib:=true,
+                        lib/commons-codec-1.10.jar;lib:=true,
+                        lib/commons-collections-3.2.1.jar;lib:=true,
+                        lib/commons-io-2.6.jar;lib:=true,
+                        lib/commons-lang-2.4.jar;lib:=true,
+                        lib/metrics-core-3.1.2.jar;lib:=true,
+                        lib/joda-time-2.9.jar;lib:=true,
                         lib/java-support-7.3.0.jar;lib:=true,
-                        lib/metrics-core-4.0.0.jar;lib:=true,     
+                        lib/bcprov-jdk15on-1.54.jar;lib:=true,
+                        lib/cryptacular-1.1.1.jar;lib:=true,
+                        lib/hamcrest-core-1.3.jar;lib:=true,
                         lib/xmlsec-1.3.0.jar;lib:=true,
                         lib/opensaml-core-3.3.1.jar;lib:=true,
                         lib/opensaml-messaging-api-3.3.1.jar;lib:=true,
