--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 sourceCompatibility = '1.8'
-version = '5.4.0'
+version = '5.4.0.1'
 
 repositories {
     maven { url "http://repo.dotcms.com/artifactory/libs-release" }
@@ -81,18 +81,22 @@ jar {
                     !org.bouncycastle.*,!com.google.common.*
                 ''',
                 'Include-Resource': '''
+                        lib/jsr305-3.0.1.jar;lib:=true,                        
                         lib/guava-20.0.jar;lib:=true,
                         lib/commons-codec-1.10.jar;lib:=true,
                         lib/commons-collections-3.2.1.jar;lib:=true,
                         lib/commons-io-2.6.jar;lib:=true,
                         lib/commons-lang-2.4.jar;lib:=true,
                         lib/metrics-core-4.0.0.jar;lib:=true,
+                        lib/stax-api-1.0-2.jar;lib:=true,                        
                         lib/joda-time-2.9.jar;lib:=true,
                         lib/java-support-7.3.0.jar;lib:=true,
+                        lib/xmlsec-2.0.5.jar;lib:=true,                        
                         lib/bcprov-jdk15on-1.54.jar;lib:=true,
+                        lib/stax2-api-3.1.4.jar;lib:=true,   
+                        lib/woodstox-core-asl-4.4.1.jar;lib:=true,                        
                         lib/cryptacular-1.1.1.jar;lib:=true,
                         lib/hamcrest-core-1.3.jar;lib:=true,
-                        lib/xmlsec-1.3.0.jar;lib:=true,
                         lib/opensaml-core-3.3.1.jar;lib:=true,
                         lib/opensaml-messaging-api-3.3.1.jar;lib:=true,
                         lib/opensaml-messaging-impl-3.3.1.jar;lib:=true,
