--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 sourceCompatibility = '1.8'
-version = '5.4.0.1'
+version = '20.11.2'
 
 repositories {
     maven { url "http://repo.dotcms.com/artifactory/libs-release" }
@@ -13,8 +13,8 @@ configurations {
 }
 dependencies {
 
-    //compile('com.dotcms:dotcms:5.3.8') { transitive = true }
-    compile files("./dotcms_master.jar")
+    compile('com.dotcms:dotcms:20.10.1') { transitive = true }
+    //compile files("./dotcms_master.jar")
     compile(group: 'org.apache.felix', name: 'org.apache.felix.main', version: '5.6.10') {
         exclude(group: 'commons-logging')
         exclude(group: 'org.slf4j')
