--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ configurations {
 }
 dependencies {
 
-    compile('com.dotcms:dotcms:20.10.1') { transitive = true }
+    compile('com.dotcms:dotcms:20.10.1') { transitive = false }
     //compile files("./dotcms_master.jar")
     compile(group: 'org.apache.felix', name: 'org.apache.felix.main', version: '5.6.10') {
         exclude(group: 'commons-logging')
