--- a/build.gradle
+++ b/build.gradle
@@ -13,30 +13,7 @@ configurations {
 }
 dependencies {
 
-    compile('com.dotcms:dotcms:20.10.1') { transitive = true }
-    //compile files("./dotcms_master.jar")
-    compile(group: 'org.apache.felix', name: 'org.apache.felix.main', version: '5.6.10') {
-        exclude(group: 'commons-logging')
-        exclude(group: 'org.slf4j')
-    }
-    //providedCompile "javax.servlet:javax.servlet-api:3.1.0"
-    compile "javax.servlet:javax.servlet-api:3.1.0"
-    compile "commons-io:commons-io:2.6"
-
-    /*compile  'org.opensaml:opensaml-core:3.4.5'
-    compile  'org.opensaml:opensaml-saml-api:3.4.5'
-    compile  'org.opensaml:opensaml-security-api:3.4.5'
-    compile  'org.opensaml:opensaml-xmlsec-impl:3.4.5'
-    compile  'org.opensaml:opensaml-xmlsec-api:3.4.5'
-    compile  'org.opensaml:opensaml-security-impl:3.4.5'
-    compile  'org.opensaml:opensaml-messaging-impl:3.4.5'
-    compile  'org.opensaml:opensaml-messaging-api:3.4.5'
-
-    compile  ('org.opensaml:opensaml-storage-impl:3.4.5'){ transitive = false }
-    compile  'org.opensaml:opensaml-storage-api:3.4.5'
-    compile  'org.opensaml:opensaml-xacml-api:3.4.5'
-    compile  'org.opensaml:opensaml-xacml-saml-api:3.4.5'
-    compile  'org.opensaml:opensaml-xacml-saml-impl:3.4.5'*/
+    compile('com.dotcms:dotcms:20.10.1') 
 
     compile  'org.opensaml:opensaml-core:3.3.1'
     compile  'org.opensaml:opensaml-saml-api:3.3.1'
@@ -47,17 +24,17 @@ dependencies {
     compile  'org.opensaml:opensaml-messaging-impl:3.3.1'
     compile  'org.opensaml:opensaml-messaging-api:3.3.1'
 
-    compile  ('org.opensaml:opensaml-storage-impl:3.3.1'){ transitive = false }
+    compile  ('org.opensaml:opensaml-storage-impl:3.3.1')
     compile  'org.opensaml:opensaml-storage-api:3.3.1'
     compile  'org.opensaml:opensaml-xacml-api:3.3.1'
     compile  'org.opensaml:opensaml-xacml-saml-api:3.3.1'
     compile  'org.opensaml:opensaml-xacml-saml-impl:3.3.1'
-
+    compile  'org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1'
     testCompile 'junit:junit:4.12'
     
 }
 
-
+import java.util.jar.*
 jar.baseName = 'com.dotcms.samlbundle'
 /////////////////////////
 //Plugin jar
@@ -71,20 +48,12 @@ jar {
                 'Bundle-Activator': 'com.dotcms.saml.osgi.Activator',
                 'DynamicImport-Package': '*',
                 'Import-Package': '''
-                    javax.servlet.http;version=0,
-                    javax.servlet;version=0,
-                    com.dotmarketing.osgi;version=0,
-                    org.apache.felix.http.api;version=0,
-                    org.osgi.framework;version=0,
-                    org.osgi.service.http;version=0,
-                    com.dotcms.saml;version=0,
-                    !org.bouncycastle.*,!com.google.common.*
+                    !com.google.common.*,
+                    *;version=0.1
+                    
                 ''',
                 'Include-Resource': '''
-                        lib/velocity-1.7.jar;lib:=true,
-                        lib/jsr305-3.0.1.jar;lib:=true,                        
                         lib/guava-20.0.jar;lib:=true,
-                        lib/commons-codec-1.10.jar;lib:=true,
                         lib/commons-collections-3.2.1.jar;lib:=true,
                         lib/commons-io-2.6.jar;lib:=true,
                         lib/commons-lang-2.4.jar;lib:=true,
@@ -122,9 +91,96 @@ jar {
     }
 }
 
+jar.finalizedBy 'fragmentJar'
+
+/**
+ * Searches for jars inside the src/main/resources/libs folder, the returned list is used for the
+ * Bundle-ClassPath attribute.
+ * @return String with the list of jars inside the src/main/resources/libs folder or empty if the
+ * folder does not exist or it is empty.
+ */
+def classPathLibraries() {
+
+    def bundleClassPath = "";
+    fileTree("src/main/resources/libs").filter { it.isFile() }.each { bundleClassPath += "libs/" + it.name + "," }
+
+    if (bundleClassPath != "") {
+        bundleClassPath = '.,' + bundleClassPath
+    }
+
+    return bundleClassPath
+}
+
+/////////////////////////
+//Fragment jar
+/////////////////////////
+
+ext {
+    bundleName = "OSGI 3rd Party library fragment"
+    bundleDescription = "dotCMS - OSGI 3rd Party library fragment"
+    fragmentHost = "system.bundle; extension:=framework"
+    bundleSymbolicName = "" //Auto generated based on the plugin jar
+    bundleVersion = "" //Auto generated based on the plugin jar
+    importPackage = "" //Auto generated based on the plugin jar
+    bundleManifestVersion = "" //Auto generated based on the plugin jar
+    bundleDocURL = "" //Auto generated based on the plugin jar
+    bundleVendor = "" //Auto generated based on the plugin jar
+}
+
+/**
+ * The import generates versions like this: version="[1.8,2)"
+ * That format does not work for the export, so we need to replace it
+ * to: version=0
+ */
+ext.fixVersionNumber = {importValue ->
+    return importValue.replaceAll("\"\\[[0-9.,]+\\)\"", "0")
+}
+
+/**
+ * Reads the Manifest file of the just created plugin jar in order to get the required info
+ * to automatically create the fragment jar.
+ */
+task readManifesttAttributes {
+    doFirst {
+        File file = configurations.baseline.singleFile
+        JarFile jar = new JarFile(file)
+        Attributes manifest = jar.getManifest().getMainAttributes()
+        bundleSymbolicName = "${manifest.getValue('Bundle-SymbolicName')}"
+        bundleVersion = "${manifest.getValue('Bundle-Version')}"
+        importPackage = "${manifest.getValue('Import-Package')}"
+        bundleManifestVersion = "${manifest.getValue('Bundle-ManifestVersion')}"
+        bundleDocURL = "${manifest.getValue('Bundle-DocURL')}"
+        bundleVendor = "${manifest.getValue('Bundle-Vendor')}"
+    }
+}
+
+task fragmentJar(type: Jar) {
+
+    doFirst {
+        //Setting the fragment jar name
+        baseName = project.name
+        archiveName = "${baseName}.fragment-${version}.jar"
+        importPackage = fixVersionNumber(importPackage)
+
+        manifest {
+            attributes (
+                    'Bundle-Name': "${bundleName}",
+                    'Bundle-Description': "${bundleDescription}",
+                    'Bundle-Vendor': "${bundleVendor}",
+                    'Bundle-Version': "${version}",
+                    'Bundle-SymbolicName': "${baseName}.fragment",
+                    'Bundle-ManifestVersion': "${bundleManifestVersion}",
+                    'Bundle-DocURL': "${bundleDocURL}",
+                    'Fragment-Host': "${fragmentHost}",
+                    'Export-Package': "${importPackage}"
+            )
+        }
+    }
+}
+fragmentJar.dependsOn 'readManifesttAttributes'
+
 task wrapper(type: Wrapper) {
     gradleVersion = '4.2'
 }
-
 
 
