--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 configurations {
     osgiLibs
 }
-dependencies {
+dependencies {  
 
 
     compile('com.dotcms:dotcms:20.10.1') 
@@ -53,6 +53,8 @@ jar {
                     
                 ''',
                 'Include-Resource': '''
+                        lib/commons-codec-1.10.jar,
+                        lib/jsr305-3.0.1.jar,
                         lib/guava-20.0.jar;lib:=true,
                         lib/commons-collections-3.2.1.jar;lib:=true,
                         lib/commons-io-2.6.jar;lib:=true,
