--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 sourceCompatibility = '1.8'
-version = '20.12'
+version = '20.12.1'
 
 repositories {
     maven { url "https://repo.dotcms.com/artifactory/libs-release" }
@@ -14,21 +14,51 @@ configurations {
 dependencies {
 
 
-    compile 'com.dotcms:dotcms:20.11'
-    compile  'org.opensaml:opensaml-core:3.3.1'
-    compile  'org.opensaml:opensaml-saml-api:3.3.1'
-    compile  'org.opensaml:opensaml-security-api:3.3.1'
-    compile  'org.opensaml:opensaml-xmlsec-impl:3.3.1'
-    compile  'org.opensaml:opensaml-xmlsec-api:3.3.1'
-    compile  'org.opensaml:opensaml-security-impl:3.3.1'
-    compile  'org.opensaml:opensaml-messaging-impl:3.3.1'
-    compile  'org.opensaml:opensaml-messaging-api:3.3.1'
-    compile  'org.opensaml:opensaml-storage-impl:3.3.1'
-    compile  'org.opensaml:opensaml-storage-api:3.3.1'
-    compile  'org.opensaml:opensaml-xacml-api:3.3.1'
-    compile  'org.opensaml:opensaml-xacml-saml-api:3.3.1'
-    compile  'org.opensaml:opensaml-xacml-saml-impl:3.3.1'
-    compile  'org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1'
+    compile  ('com.dotcms:dotcms:20.11.1') { transitive = true }
+    compile  ('org.opensaml:opensaml-core:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-saml-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-security-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-xmlsec-impl:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-xmlsec-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-security-impl:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-messaging-impl:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-messaging-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-storage-impl:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-storage-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-xacml-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-xacml-saml-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-xacml-saml-impl:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-saml-impl:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-soap-api:3.3.1') { transitive = false }
+    compile  ('org.opensaml:opensaml-soap-impl:3.3.1') { transitive = false }
+    compile  ('org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1')
+    compile  ('org.glassfish.jersey.media:jersey-media-jaxb:2.22.1') { transitive = false }
+    
+    // everything except dotCMS
+
+    osgiLibs  ('org.opensaml:opensaml-core:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-saml-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-security-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-xmlsec-impl:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-xmlsec-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-security-impl:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-messaging-impl:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-messaging-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-storage-impl:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-storage-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-xacml-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-xacml-saml-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-xacml-saml-impl:3.3.1') { transitive = false }
+    osgiLibs ('org.glassfish.jersey.media:jersey-media-jaxb:2.22.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-saml-impl:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-soap-api:3.3.1') { transitive = false }
+    osgiLibs  ('org.opensaml:opensaml-soap-impl:3.3.1') { transitive = false }
+    osgiLibs  ('org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1'){
+        exclude(group: 'commons-logging')
+        exclude(group: 'org.slf4j')
+    }
+    
+    
     testCompile 'junit:junit:4.12'
     
 }
@@ -53,52 +83,22 @@ jar {
                     javax.servlet.annotation;version=0,
                     javax.servlet.http;version=0,
                     javax.naming;version=0,
-                    org.apache.velocity.*,\t
+                    !org.apache.velocity.*,
                     !com.google.common.*,
+                    !org.opensaml.*,
                     *;version=0.1
                     
-                ''',
-                'Include-Resource': '''
-                        lib/dot.slf4j-api-1.7.12_2.jar;lib:=true,
-                        lib/log4j-slf4j-impl-2.8.2.jar;lib:=true,
-                        lib/guava-20.0.jar;lib:=true,
-                        lib/commons-collections-3.2.1.jar;lib:=true,
-                        lib/commons-io-2.6.jar;lib:=true,
-                        lib/commons-lang-2.4.jar;lib:=true,
-                        lib/metrics-core-4.0.0.jar;lib:=true,
-                        lib/stax-api-1.0-2.jar;lib:=true,                        
-                        lib/joda-time-2.9.jar;lib:=true,
-                        lib/java-support-7.3.0.jar;lib:=true,
-                        lib/xmlsec-2.0.5.jar;lib:=true,                        
-                        lib/bcprov-jdk15on-1.54.jar;lib:=true,
-                        lib/stax2-api-3.1.4.jar;lib:=true,   
-                        lib/woodstox-core-asl-4.4.1.jar;lib:=true,                        
-                        lib/cryptacular-1.1.1.jar;lib:=true,
-                        lib/hamcrest-core-1.3.jar;lib:=true,
-                        lib/opensaml-core-3.3.1.jar;lib:=true,
-                        lib/opensaml-messaging-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-messaging-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-profile-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-profile-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-saml-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-saml-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-security-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-security-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-soap-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-soap-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-storage-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-storage-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-xacml-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-xacml-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-xacml-saml-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-xacml-saml-impl-3.3.1.jar;lib:=true,
-                        lib/opensaml-xmlsec-api-3.3.1.jar;lib:=true,
-                        lib/opensaml-xmlsec-impl-3.3.1.jar;lib:=true
                 '''
         )
     }
 }
 
+task copyToLib(type: Copy) {
+    into "src/main/resources/libs"
+    from configurations.osgiLibs
+}
+
+compileJava.dependsOn copyToLib
 jar.finalizedBy 'fragmentJar'
 
 /**
