--- a/build.gradle
+++ b/build.gradle
@@ -31,16 +31,15 @@ dependencies {
     compile  ('org.opensaml:opensaml-saml-impl:3.3.1') { transitive = false }
     compile  ('org.opensaml:opensaml-soap-api:3.3.1') { transitive = false }
     compile  ('org.opensaml:opensaml-soap-impl:3.3.1') { transitive = false }
-    compile  ('org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1')
     compile  ('org.glassfish.jersey.media:jersey-media-jaxb:2.22.1') { transitive = false }
     compile  ('commons-io:commons-io:2.8.0') { transitive = false }
     compile  (group: 'org.apache.servicemix.bundles', name:'org.apache.servicemix.bundles.opensaml', version:'3.3.1_1'){
-        exclude(group: 'velocity')
         exclude(group: 'org.apache.velocity')
         exclude(group: 'commons-logging')
         exclude(group: 'org.slf4j')
     }
     
+    // the same as the compile jars without dotCMS
     osgiLibs  ('org.opensaml:opensaml-core:3.3.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-saml-api:3.3.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-security-api:3.3.1') { transitive = false }
@@ -54,11 +53,12 @@ dependencies {
     osgiLibs  ('org.opensaml:opensaml-xacml-api:3.3.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-xacml-saml-api:3.3.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-xacml-saml-impl:3.3.1') { transitive = false }
-    osgiLibs ('org.glassfish.jersey.media:jersey-media-jaxb:2.22.1') { transitive = false }
+    osgiLibs  ('org.glassfish.jersey.media:jersey-media-jaxb:2.22.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-saml-impl:3.3.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-soap-api:3.3.1') { transitive = false }
     osgiLibs  ('org.opensaml:opensaml-soap-impl:3.3.1') { transitive = false }
     osgiLibs  ('org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1'){
+        exclude(group: 'org.apache.velocity')
         exclude(group: 'commons-logging')
         exclude(group: 'org.slf4j')
     }
