--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 sourceCompatibility = '1.8'
-version = '25.04.28'
+version = '25.06.3'
 
 repositories {
     maven { url "https://repo.dotcms.com/artifactory/libs-release" }
@@ -14,7 +14,8 @@ configurations {
 dependencies {
 
     compile  ('io.vavr:vavr:0.9.3')
-    compile  ('com.dotcms:dotcms:23.01.12') { transitive = false }
+    compile  ('com.dotcms:dotcms-core:25.06.05-1') { transitive = false }
+    //implementation(files("/Users/jsanca/gitsources/new-core2/core/dotCMS/target/dotcms-core-1.0.0-SNAPSHOT.jar"))
     compile  ('org.opensaml:opensaml-messaging-impl:3.3.1') { transitive = false }
     compile  ('commons-io:commons-io:2.8.0') { transitive = false }
     compile  ('org.apache.servicemix.bundles:org.apache.servicemix.bundles.opensaml:3.3.1_1'){
